manual merge from master

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Google-Udacity 7 days challenge</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./css/index.css" rel='stylesheet' type="text/css">
-    <!--script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script -->
+    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 </head>
 
 <body>
@@ -34,8 +34,8 @@
 
 </body>
 <!-- Scripts -->
-<script src="./js/idb/idb.js"></script>
-<script src="./js/idbScript/index.js"></script>
-<script src="./js/sw/index.js" ></script>
-<script src="./js/main.js" ></script>
+<script src="./js/idb/idb.js" ></script>
+<script src="./js/idbScript/index.js" type="text/babel"></script>
+<script src="./js/sw/index.js" type="text/babel"></script>
+<script src="./js/main.js" type="text/babel"></script>
 </html>
